--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@ permalink: /404.html
 </head>
 <body>
 <p>404</p>
+<p>彩虹猫</p>
 <a href="video.mp4">我好像找不到这个文件，但你可以点我查看我送给你的一个视频</a>
 </body>
 </html>
