--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-</head>
-<body>
-<p>彩虹猫</p>
-<a href="video.mp4">点我看视频</a>
-</body>
+ <head> 
+  <meta charset="utf-8"> 
+ </head> 
+ <body id="v1"> 
+  <p id="v4" <video="" src="video.mp4" width="100%" controls="controls"> </p> 
+  <h1 id="v5">彩虹猫</h1>
+  <video src="video.mp4" width="100%" controls="controls" id="v6"> 
+  </video>
+ </body>
 </html>
